Configuration URL API Vercel

--- a/admin.html
+++ b/admin.html
@@ -350,7 +350,7 @@
 
     <script>
         // ===== CONFIGURATION API =====
-        const API_URL = 'https://TON-PROJET.vercel.app/api/products'; // Tu remplaceras après déploiement
+        const API_URL = 'https://site-e-commerce-stage-2025-r8ol-ow2p70y87-gamer3001s-projects.vercel.app/api/products';
         const ADMIN_PASSWORD = 'admin123'; // Mot de passe pour l'API
         
         // Default credentials (À CHANGER EN PRODUCTION!)
