--- a/vitrine.html
+++ b/vitrine.html
@@ -450,10 +450,12 @@
     </div>
 
     <script>
-        // URL de l'API
-        const API_URL = 'https://site-e-commerce-stage-2025-r8ol-ow2p70y87-gamer3001s-projects.vercel.app/api/products';
+        // Configuration JSONBin
+        const JSONBIN_API_KEY = '$2a$10$c8PuGy3f7Z9XNgC.kkqwAeUufYgyDzzDYV/Qm9WJIdOVCP9.TLjBC';
+        const JSONBIN_BIN_ID = '694033ded0ea881f402b3c1b';
+        const JSONBIN_URL = `https://api.jsonbin.io/v3/b/${JSONBIN_BIN_ID}`;
         
-        // Charger les produits depuis l'API
+        // Charger les produits depuis JSONBin
         let products = [];
         let filteredProducts = [];
         let currentProductId = null;
@@ -461,10 +463,14 @@
 
         async function loadProductsFromAPI() {
             try {
-                const response = await fetch(API_URL);
+                const response = await fetch(JSONBIN_URL + '/latest', {
+                    headers: {
+                        'X-Master-Key': JSONBIN_API_KEY
+                    }
+                });
                 if (response.ok) {
                     const data = await response.json();
-                    return data.products;
+                    return data.record || getDefaultProducts();
                 } else {
                     console.error('Erreur de chargement:', response.status);
                     return getDefaultProducts();
